kubernetes_master/prometheus/prometheus-kubernetes/prometheus-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
#kind: Deployment
metadata:
  labels:
    prometheus: k8s
  name: prometheus-k8s
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
      prometheus: k8s
  serviceName: prometheus-operated
  template:
    metadata:
      labels:
        app: prometheus
        prometheus: k8s
    spec:
      containers:
      - args:
        - --config.file=/etc/prometheus/config/prometheus.yaml
        - --storage.tsdb.path=/var/prometheus/data
        - --storage.tsdb.retention=120h
        - --web.route-prefix=/
        - --web.enable-lifecycle
        - --web.enable-admin-api
        image: quay.io/prometheus/prometheus:v2.4.3
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 0
        livenessProbe:
          failureThreshold: 10
          httpGet:
            path: /status
            port: web
            scheme: HTTP
          initialDelaySeconds: 300
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        name: prometheus
        ports:
        - containerPort: 9090
          name: web
          protocol: TCP
        readinessProbe:
          failureThreshold: 6
          httpGet:
            path: /status
            port: web
            scheme: HTTP
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 3
        resources:
          requests:
            memory: 1.5Gi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/prometheus/config
          name: config
          readOnly: true
        - mountPath: /etc/prometheus/rules
          name: rules
          readOnly: true
        - mountPath: /var/prometheus/data
          name: prometheus-k8s-db
          subPath: prometheus-db
      - args:
        - -webhook-url=http://localhost:9090/-/reload
        - -volume-dir=/etc/prometheus/config
        - -volume-dir=/etc/prometheus/rules
        image: quay.io/coreos/configmap-reload:v0.0.1
        imagePullPolicy: IfNotPresent
        name: prometheus-config-reloader
        resources:
          limits:
            cpu: 5m
            memory: 10Mi
        volumeMounts:
        - mountPath: /etc/prometheus/config
          name: config
          readOnly: true
        - mountPath: /etc/prometheus/rules
          name: rules
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      serviceAccount: prometheus-k8s
      serviceAccountName: prometheus-k8s
      terminationGracePeriodSeconds: 600
      volumes:
      - configMap:
          defaultMode: 420
          name: prometheus-k8s
        name: config
      - configMap:
          defaultMode: 420
          name: prometheus-k8s
        name: rules
  updateStrategy:
    type: RollingUpdate
  #volumes:
  #- name: pv11-nfs
    #persistentVolumeClaim:              #指定pvc
      #claimName: pvc11
  volumeClaimTemplates:
  #- metadata:
      #name: prometheus-data
    #spec:
      #persistentVolumeClaim:  
        #claimName: pvc11
  - metadata:
      name: prometheus-k8s-db
    spec:
      accessModes:
      - ReadWriteOnce
      storageClassName: "prometheus-data"
      resources:
        requests:
          storage: 5Gi
