kubernetes_master/prometheus/prometheus-kubernetes/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  rules:
  - host: www.jumpserver.com
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
